--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8">
         <title>ITIGEN</title>
@@ -9,83 +10,99 @@
         <link rel="stylesheet" type="text/css" href="static/fullpage/jquery.fullPage.css" />
     </head>
     <body>
-        <div id="header">
+    <div id="header">
+        <div class="box">
+            <div class="L">
+                <span id="logo"><a href="#home">ITIGEN</a></span>
+            </div>
+            <div class="R" id="menu">
+                <ul>
+                    <li><a id="s_classmates" href="#classmates">同学</a></li>
+                    <li><a id="s_besties" href="#besties">闺蜜</a></li>
+                    <li><a id="s_roommates" href="#roommates">室友</a></li>
+                    <li><a id="s_lover" href="#lover">情侣</a></li>
+                    <li><a id="s_friends" href="#friends">朋友</a></li>
+                    <li><a id="s_home" href="#home" class="name">ITIGEN</a></li>
+                </ul>
+            </div>
+            <div class="c"></div>
+        </div>
+    </div>
+    <div id="fullpage">
+        <div class="section active">
             <div class="box">
-                <div class="L">
-                    <span id="logo"><a href="#home">ITIGEN</a></span>
-                </div>
-                <div class="R" id="menu">
-                    <ul>
-                        <li><a id="s_classmates" href="#classmates">同学</a></li>
-                        <li><a id="s_besties" href="#besties">闺蜜</a></li>
-                        <li><a id="s_roommates" href="#roommates">室友</a></li>
-                        <li><a id="s_lover" href="#lover">情侣</a></li>
-                        <li><a id="s_friends" href="#friends">朋友</a></li>
-                        <li><a id="s_home" href="#home" class="name">ITIGEN</a></li>
-                    </ul>
-                </div>
-                <div class="c"></div>
+                <span class="name big">ITIGEN</span><br>
+                <span class="big">留下你的美好回忆</span><br>
             </div>
         </div>
-    <div id="fullpage">
-        <div class="section active"><h1>fullPage.js</h1></div>
-        <div class="section"><h1>fullPage.js</h1></div>
-        <div class="section"><h1>fullPage.js</h1></div>
         <div class="section">
-            <div class="slide active"><h1>Simple Demo</h1></div>
-            <div class="slide"><h1>Only text</h1></div>
-            <div class="slide"><h1>And text</h1></div>
-            <div class="slide"><h1>And more text</h1></div>
+            <div class="box">
+                <h1>朋友</h1>
+            </div>
         </div>
-        <div class="section"><h1>No wraps, no extra markup</h1></div>
-        <div class="section"><h1>Just the simplest demo ever</h1></div>
+        <div class="section">
+            <div class="box">
+                <h1>情侣</h1>
+            </div>
+        </div>
+        <div class="section">
+            <div class="box">
+                <h1>室友</h1>
+            </div>
+        </div>
+        <div class="section">
+            <div class="slide active">
+                <div class="box">
+                    <h1>闺蜜1</h1>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="box">
+                    <h1>闺蜜2</h1>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="box">
+                    <h1>闺蜜3</h1>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="box">
+                    <h1>And more ...</h1>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="box">
+                <h1>同学</h1>
+            </div>
+        </div>
     </div>
 
        
     </body>
     <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.0/jquery.min.js"></script>
     <script src="static/fullpage/vendors/jquery.easings.min.js"></script>
-    <script type="text/javascript" src="static/fullpage/vendors/jquery.slimscroll.min.js"></script>
     <script type="text/javascript" src="static/fullpage/jquery.fullPage.js"></script>
     <script>
         $(document).ready(function() {
             $('#s_home').css('color', '#4bbfc3');
             $('#fullpage').fullpage({
-                verticalCentered: true,
-                resize : true,
 				slidesColor: ['#1ABC9C', '#2ECC71', '#3498DB', '#9B59B6', '#7BAABE', '#E67E22', '#E74C3C'],
                 anchors:['home', 'friends', 'lover', 'roommates', 'besties', 'classmates'],
                 scrollingSpeed: 800,
                 easing: 'easeOutExpo',
                 menu: '#menu',
-                slidesNavigation: false,
                 loopBottom: true,
-                loopHorizontal: true,
-                autoScrolling: true,
-                scrollOverflow: false,
-                css3: false,
-                paddingTop: '51px',
-                paddingBottom: '10px',
-                fixedElements: '#element1, .element2',
-                normalScrollElements: '#element1, .element2',
-                normalScrollElementTouchThreshold: 5,
-                keyboardScrolling: true,
-                touchSensitivity: 15,
-                continuousVertical: false,
-                animateAnchor: true,
+				slidesNavigation: true,			
 
                 //events
-                onLeave: function(index, nextIndex, direction){},
                 afterLoad: function(anchorLink, index){
                     $('#menu a').css('color', '#505050');
                     $('#menu a').css('text-decoration', 'none');
                     $('#s_' + anchorLink).css('color', '#4bbfc3');
                     $('#s_' + anchorLink).css('text-decoration', 'underline');
-                },
-                afterRender: function(){},
-                afterResize: function(){},
-                afterSlideLoad: function(anchorLink, index, slideAnchor, slideIndex){},
-                onSlideLeave: function(anchorLink, index, slideIndex, direction){}
+                }
             });
         });
     </script>
