fix color of page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         $(document).ready(function() {
             $('#s_home').css('color', '#4bbfc3');
             $('#fullpage').fullpage({
-				slidesColor: ['#1ABC9C', '#2ECC71', '#3498DB', '#9B59B6', '#7BAABE', '#E67E22', '#E74C3C'],
+				slidesColor: ['#1ABC9C', '#8fb98b', '#3498DB', '#eae1c0', '#de564b', '#7BAABE', '#E67E22', '#E74C3C'],
                 anchors:['home', 'friends', 'lover', 'roommates', 'besties', 'classmates'],
                 scrollingSpeed: 800,
                 easing: 'easeOutExpo',
