--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8">
-        <title>ITIGEN</title>
+        <title>ITIGEN | 映画一言</title>
         <meta name="keywords" content="毕业照,闺蜜照,室友照">
         <meta name="description" content="毕业照留念">
 
@@ -17,12 +17,13 @@
             </div>
             <div class="R" id="menu">
                 <ul>
+                    <li><a id="s_about" href="#about">关于</a></li>
                     <li><a id="s_classmates" href="#classmates">同学</a></li>
                     <li><a id="s_besties" href="#besties">闺蜜</a></li>
                     <li><a id="s_roommates" href="#roommates">室友</a></li>
                     <li><a id="s_lover" href="#lover">情侣</a></li>
                     <li><a id="s_friends" href="#friends">朋友</a></li>
-                    <li><a id="s_home" href="#home" class="name">ITIGEN</a></li>
+                    <li><a id="s_home" href="#home" class="name">映画一言</a></li>
                 </ul>
             </div>
             <div class="c"></div>
@@ -77,6 +78,11 @@
                 <h1>同学</h1>
             </div>
         </div>
+        <div class="section" style="color: #fff;">
+            <div class="box">
+                <h1>关于</h1>
+            </div>
+        </div>
     </div>
 
        
@@ -88,8 +94,8 @@
         $(document).ready(function() {
             $('#s_home').css('color', '#4bbfc3');
             $('#fullpage').fullpage({
-				slidesColor: ['#1ABC9C', '#8fb98b', '#3498DB', '#eae1c0', '#de564b', '#7BAABE', '#E67E22', '#E74C3C'],
-                anchors:['home', 'friends', 'lover', 'roommates', 'besties', 'classmates'],
+				slidesColor: ['#1ABC9C', '#8fb98b', '#3498DB', '#eae1c0', '#de564b', '#7BAABE', '#2f2f2f', '#E67E22', '#E74C3C'],
+                anchors:['home', 'friends', 'lover', 'roommates', 'besties', 'classmates', 'about'],
                 scrollingSpeed: 800,
                 easing: 'easeOutExpo',
                 menu: '#menu',
