--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
         </div>
         <div class="section">
-            <div class="box">
-                <h1>朋友</h1>
+            <div class="box"  style="height: 100%;background: url('http://itigen.qiniudn.com/test.jpg') no-repeat fixed center;">
+                <!--<h1>朋友</h1>-->
             </div>
         </div>
         <div class="section">
