--- a/index.html
+++ b/index.html
@@ -42,34 +42,39 @@
             </div>
         </div>
         <div class="section">
-            <div class="box">
-                <h1>情侣</h1>
+            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test1.jpg') no-repeat fixed center;">
+                <!--<h1>情侣</h1>-->
             </div>
         </div>
         <div class="section">
-            <div class="box">
-                <h1>室友</h1>
+            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test7.jpg') no-repeat fixed center;">
+                <!--<h1>室友</h1>-->
             </div>
         </div>
         <div class="section">
             <div class="slide active">
-                <div class="box">
-                    <h1>闺蜜1</h1>
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test2.jpg') no-repeat fixed center;">
+                    <!--<h1>闺蜜1</h1>-->
                 </div>
             </div>
             <div class="slide">
-                <div class="box">
-                    <h1>闺蜜2</h1>
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test3.jpg') no-repeat fixed center;">
+                    <!--<h1>闺蜜2</h1>-->
                 </div>
             </div>
             <div class="slide">
-                <div class="box">
-                    <h1>闺蜜3</h1>
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test4.jpg') no-repeat fixed center;">
+                    <!--<h1>闺蜜3</h1>-->
                 </div>
             </div>
             <div class="slide">
-                <div class="box">
-                    <h1>And more ...</h1>
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test5.jpg') no-repeat fixed center;">
+                    <!--<h1>And more ...</h1>-->
+                </div>
+            </div>
+            <div class="slide">
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test6.jpg') no-repeat fixed center;">
+                    <!--<h1>And more ...</h1>-->
                 </div>
             </div>
         </div>
