--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a id="s_about" href="#about">关于</a></li>
                     <li><a id="s_classmates" href="#classmates">同学</a></li>
                     <li><a id="s_besties" href="#besties">闺蜜</a></li>
+                    <li><a id="s_people" href="#people">写真</a></li>
                     <li><a id="s_roommates" href="#roommates">室友</a></li>
                     <li><a id="s_lover" href="#lover">情侣</a></li>
                     <li><a id="s_friends" href="#friends">朋友</a></li>
@@ -79,8 +80,13 @@
             </div>
         </div>
         <div class="section">
-            <div class="box">
-                <h1>同学</h1>
+            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test8.jpg') no-repeat fixed center;">
+                <!--<h1>闺蜜</h1>-->
+            </div>
+        </div>
+        <div class="section">
+            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test9.jpg') no-repeat fixed center;">
+                <!--<h1>同学</h1>-->
             </div>
         </div>
         <div class="section" style="color: #fff;">
@@ -100,7 +106,7 @@
             $('#s_home').css('color', '#4bbfc3');
             $('#fullpage').fullpage({
 				slidesColor: ['#1ABC9C', '#8fb98b', '#3498DB', '#eae1c0', '#de564b', '#7BAABE', '#2f2f2f', '#E67E22', '#E74C3C'],
-                anchors:['home', 'friends', 'lover', 'roommates', 'besties', 'classmates', 'about'],
+                anchors:['home', 'friends', 'lover', 'roommates', 'people', 'besties', 'classmates', 'about'],
                 scrollingSpeed: 800,
                 easing: 'easeOutExpo',
                 menu: '#menu',
