fix style of menu

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a id="s_roommates" href="#roommates">室友</a></li>
                     <li><a id="s_lover" href="#lover">情侣</a></li>
                     <li><a id="s_friends" href="#friends">朋友</a></li>
-                    <li><a id="s_home" href="#home" class="name">映画一言</a></li>
+                    <li><a id="s_home" href="#home">映画一言</a></li>
                 </ul>
             </div>
             <div class="c"></div>
