--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
             </div>
         </div>
         <div class="section">
-            <div class="box"  style="height: 100%;background: url('http://itigen.qiniudn.com/test.jpg') no-repeat fixed center;">
+            <!--<div class="box"  style="height: 100%;background: url('http://itigen.qiniudn.com/test.jpg') no-repeat fixed center;">-->
+            <div class="box">
                 <!--<h1>朋友</h1>-->
+                <img class="img1" src="http://itigen.qiniudn.com/friends_1.jpg"/>
+                <img class="img2" src="http://itigen.qiniudn.com/friends_2.jpg"/>
+                <img class="img3" src="http://itigen.qiniudn.com/friends_3.jpg"/>
+                <img class="img4" src="http://itigen.qiniudn.com/friends_4.jpg"/>
+                <img src="http://itigen.qiniudn.com/friends_5.jpg"/>
             </div>
         </div>
         <div class="section">
@@ -85,7 +91,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test9.jpg') no-repeat fixed center;">
+            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/classmate.jpg') no-repeat fixed center;">
                 <!--<h1>同学</h1>-->
             </div>
         </div>
