--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         $(document).ready(function() {
             $('#s_home').css('color', '#4bbfc3');
             $('#fullpage').fullpage({
-				slidesColor: ['#1ABC9C', '#8fb98b', '#3498DB', '#eae1c0', '#de564b', '#7BAABE', '#2f2f2f', '#E67E22', '#E74C3C'],
+				slidesColor: ['#1ABC9C', '#8fb98b', '#3498DB', '#eae1c0', '#de564b', '#7BAABE', '#E67E22', '#2f2f2f', '#E74C3C'],
                 anchors:['home', 'friends', 'lover', 'roommates', 'people', 'besties', 'classmates', 'about'],
                 scrollingSpeed: 800,
                 easing: 'easeOutExpo',
