--- a/index.html
+++ b/index.html
@@ -96,10 +96,24 @@
             </div>
         </div>
         <div class="section" style="color: #fff;">
-            <div class="box">
-                <h1>关于</h1>
+            <div class="t_box">&nbsp;</div>
+            <div id="about_us">
+                <div class="item_top">
+                    <p><b>关于我们</b></p>
+                    <p>关于我们</p>
+                </div>
+                <div class="item">
+                    <p><b>联系我们</b></p>
+                    <p></p>关于我们</p>
+                </div>
+                <div class="item">
+                    <p><b>隐私声明</b></p>
+                    <p></p>关于我们</p>
+                </div>
             </div>
+            <div class="c"></div>
         </div>
+
     </div>
 
        
