--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <div id="about_us">
                 <div class="item_top">
                     <p><b>关于我们</b></p>
+                    <br>
                     <div class="sub_item">
                         <div class="avatar" style="background-image: url('http://itigen.qiniudn.com/avatar_liuxu.jpg')">&nbsp;</div>
                     <div class="team">
@@ -123,13 +124,12 @@
                 <div class="item">
                     <p><b>联系我们</b></p>
                     <div class="sub_item">
-                        <p>
-                            电话：18601980445<br>
-                            QQ：522183104<br>
-                            淘宝店铺：
-                        </p>
+                        电话：18601980445<br>
+                        QQ：522183104<br>
+                        淘宝店铺：
                     </div>
                     <div class="sub_item">
+                        <img src="http://itigen.qiniudn.com/weixin.jpg" width="128">
                     </div>
                     <div class="c"></div>
                 </div>
