fix weixin image

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                     <div class="sub_item">
                         电话：18601980445<br>
                         QQ：522183104<br>
-                        淘宝店铺：
+                        淘宝店铺：http://itigen.taobao.com
                     </div>
                     <div class="sub_item">
-                        <img src="http://itigen.qiniudn.com/weixin.jpg" width="128">
+                        <img src="http://itigen.qiniudn.com/w.jpg" width="128">
                     </div>
                     <div class="c"></div>
                 </div>
