--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="sub_item">
                         电话：18601980445<br>
                         QQ：522183104<br>
-                        淘宝店铺：http://itigen.taobao.com
+                        淘宝店铺：<a href="http://itigen.taobao.com" target="_blank">itigen.taobao.com</a>
                     </div>
                     <div class="sub_item">
                         <img src="http://itigen.qiniudn.com/w.jpg" width="128">
