--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="毕业照留念">
 
         <link href="static/main.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
         <link rel="stylesheet" type="text/css" href="static/fullpage/jquery.fullPage.css" />
     </head>
     <body>
