图片预加载

--- a/index.html
+++ b/index.html
@@ -11,141 +11,146 @@
         <link rel="stylesheet" type="text/css" href="static/fullpage/jquery.fullPage.css" />
     </head>
     <body>
-    <div id="header">
-        <div class="box">
-            <div class="L">
-                <span id="logo"><a href="#home">ITIGEN</a></span>
-            </div>
-            <div class="R" id="menu">
-                <ul>
-                    <li><a id="s_about" href="#about">关于</a></li>
-                    <li><a id="s_classmates" href="#classmates">同学</a></li>
-                    <li><a id="s_besties" href="#besties">闺蜜</a></li>
-                    <li><a id="s_people" href="#people">写真</a></li>
-                    <li><a id="s_roommates" href="#roommates">室友</a></li>
-                    <li><a id="s_lover" href="#lover">情侣</a></li>
-                    <li><a id="s_friends" href="#friends">朋友</a></li>
-                    <li><a id="s_home" href="#home" ></a></li>
-                </ul>
-            </div>
-            <div class="c"></div>
-        </div>
-    </div>
-    <div id="fullpage">
-        <div class="section active">
+        <div id="header">
             <div class="box">
-                <span class="name big">ITIGEN</span><br>
-                <span class="big">留下你的美好回忆</span><br>
+                <div class="L">
+                    <span id="logo"><a href="#home">ITIGEN</a></span>
+                </div>
+                <div class="R" id="menu">
+                    <ul>
+                        <li><a id="s_about" href="#about">关于</a></li>
+                        <li><a id="s_classmates" href="#classmates">同学</a></li>
+                        <li><a id="s_besties" href="#besties">闺蜜</a></li>
+                        <li><a id="s_people" href="#people">写真</a></li>
+                        <li><a id="s_roommates" href="#roommates">室友</a></li>
+                        <li><a id="s_lover" href="#lover">情侣</a></li>
+                        <li><a id="s_friends" href="#friends">朋友</a></li>
+                        <li><a id="s_home" href="#home" ></a></li>
+                    </ul>
+                </div>
+                <div class="c"></div>
             </div>
         </div>
-        <div class="section">
-            <!--<div class="box"  style="height: 100%;background: url('http://itigen.qiniudn.com/test.jpg') no-repeat fixed center;">-->
-            <div class="box">
-                <!--<h1>朋友</h1>-->
-                <img class="img1" src="http://itigen.qiniudn.com/friends_1.jpg"/>
-                <img class="img2" src="http://itigen.qiniudn.com/friends_2.jpg"/>
-                <img class="img3" src="http://itigen.qiniudn.com/friends_3.jpg"/>
-                <img class="img4" src="http://itigen.qiniudn.com/friends_4.jpg"/>
-                <img src="http://itigen.qiniudn.com/friends_5.jpg"/>
-            </div>
-        </div>
-        <div class="section">
-            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test1.jpg') no-repeat fixed center;">
-                <!--<h1>情侣</h1>-->
-            </div>
-        </div>
-        <div class="section">
-            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test7.jpg') no-repeat fixed center;">
-                <!--<h1>室友</h1>-->
-            </div>
-        </div>
-        <div class="section">
-            <div class="slide active">
-                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test2.jpg') no-repeat fixed center;">
-                    <!--<h1>闺蜜1</h1>-->
+        <div id="fullpage">
+            <div class="section active">
+                <div class="box">
+                    <span class="name big">ITIGEN</span><br>
+                    <span class="big">留下你的美好回忆</span><br>
                 </div>
             </div>
-            <div class="slide">
-                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test3.jpg') no-repeat fixed center;">
-                    <!--<h1>闺蜜2</h1>-->
+            <div class="section">
+                <!--<div class="box"  style="height: 100%;background: url('http://itigen.qiniudn.com/test.jpg') no-repeat fixed center;">-->
+                <div class="box">
+                    <!--<h1>朋友</h1>-->
+                    <img class="img1" src="http://itigen.qiniudn.com/friends_1.jpg"/>
+                    <img class="img2" src="http://itigen.qiniudn.com/friends_2.jpg"/>
+                    <img class="img3" src="http://itigen.qiniudn.com/friends_3.jpg"/>
+                    <img class="img4" src="http://itigen.qiniudn.com/friends_4.jpg"/>
+                    <img src="http://itigen.qiniudn.com/friends_5.jpg"/>
                 </div>
             </div>
-            <div class="slide">
-                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test4.jpg') no-repeat fixed center;">
-                    <!--<h1>闺蜜3</h1>-->
+            <div class="section">
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test1.jpg') no-repeat fixed center;">
+                    <!--<h1>情侣</h1>-->
                 </div>
             </div>
-            <div class="slide">
-                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test5.jpg') no-repeat fixed center;">
-                    <!--<h1>And more ...</h1>-->
+            <div class="section">
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test7.jpg') no-repeat fixed center;">
+                    <!--<h1>室友</h1>-->
                 </div>
             </div>
-            <div class="slide">
-                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test6.jpg') no-repeat fixed center;">
-                    <!--<h1>And more ...</h1>-->
+            <div class="section">
+                <div class="slide active">
+                    <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test2.jpg') no-repeat fixed center;">
+                        <!--<h1>闺蜜1</h1>-->
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test3.jpg') no-repeat fixed center;">
+                        <!--<h1>闺蜜2</h1>-->
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test4.jpg') no-repeat fixed center;">
+                        <!--<h1>闺蜜3</h1>-->
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test5.jpg') no-repeat fixed center;">
+                        <!--<h1>And more ...</h1>-->
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test6.jpg') no-repeat fixed center;">
+                        <!--<h1>And more ...</h1>-->
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="section">
-            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test8.jpg') no-repeat fixed center;">
-                <!--<h1>闺蜜</h1>-->
+            <div class="section">
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/test8.jpg') no-repeat fixed center;">
+                    <!--<h1>闺蜜</h1>-->
+                </div>
             </div>
-        </div>
-        <div class="section">
-            <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/classmate.jpg') no-repeat fixed center;">
-                <!--<h1>同学</h1>-->
+            <div class="section">
+                <div class="box" style="height: 100%;background: url('http://itigen.qiniudn.com/classmate.jpg') no-repeat fixed center;">
+                    <!--<h1>同学</h1>-->
+                </div>
             </div>
-        </div>
-        <div class="section" style="color: #fff;">
-            <div class="t_box"></div>
-            <div id="about_us">
-                <div class="item_top">
-                    <p><b>关于我们</b></p>
-                    <br>
-                    <div class="sub_item">
-                        <div class="avatar" style="background-image: url('http://itigen.qiniudn.com/avatar_liuxu.jpg')">&nbsp;</div>
-                    <div class="team">
-                        <p><b>刘旭</b></p>
+            <div class="section" style="color: #fff;">
+                <div class="t_box"></div>
+                <div id="about_us">
+                    <div class="item_top">
+                        <p><b>关于我们</b></p>
+                        <br>
+                        <div class="sub_item">
+                            <div class="avatar" style="background-image: url('http://itigen.qiniudn.com/avatar_liuxu.jpg')">&nbsp;</div>
+                        <div class="team">
+                            <p><b>刘旭</b></p>
+                            <p>
+                                北京外国语大学，硕士<br>
+                            </p>
+                        </div>
+                        </div>
+                        <div class="sub_item">
+                            <div class="avatar" style="background-image: url('http://itigen.qiniudn.com/avatar_tonghs.jpg');">&nbsp;</div>
+                        <div class="team">
+                            <p><b>仝华帅</b></p>
+                            <p>
+                                程序猿<br>
+                            </p>
+                        </div>
+                        </div>
+                        <div class="c"></div>
+                    </div>
+                    <div class="item">
+                        <p><b>联系我们</b></p>
+                        <div class="sub_item">
+                            电话：18601980445<br>
+                            QQ：522183104<br>
+                            淘宝店铺：<a href="http://itigen.taobao.com" target="_blank">itigen.taobao.com</a>
+                        </div>
+                        <div class="sub_item">
+                            <img src="http://itigen.qiniudn.com/w.jpg" width="128">
+                        </div>
+                        <div class="c"></div>
+                    </div>
+                    <div class="item">
+                        <p><b>版权声明</b></p>
                         <p>
-                            北京外国语大学，硕士<br>
+                            本网站所载照片已取得 被拍摄者 授权。<br>
+                            本网站所载照片版权归 被拍摄者 和 映画一言 所有，未经书面允许，任何机构或个人不得复制、传播和使用。<br>
+                            如果我们侵犯了您的权利，或者您不希望您的照片出现在本站，请及时与我们联系。
                         </p>
                     </div>
-                    </div>
-                    <div class="sub_item">
-                        <div class="avatar" style="background-image: url('http://itigen.qiniudn.com/avatar_tonghs.jpg');">&nbsp;</div>
-                    <div class="team">
-                        <p><b>仝华帅</b></p>
-                        <p>
-                            程序猿<br>
-                        </p>
-                    </div>
-                    </div>
-                    <div class="c"></div>
-                </div>
-                <div class="item">
-                    <p><b>联系我们</b></p>
-                    <div class="sub_item">
-                        电话：18601980445<br>
-                        QQ：522183104<br>
-                        淘宝店铺：<a href="http://itigen.taobao.com" target="_blank">itigen.taobao.com</a>
-                    </div>
-                    <div class="sub_item">
-                        <img src="http://itigen.qiniudn.com/w.jpg" width="128">
-                    </div>
-                    <div class="c"></div>
-                </div>
-                <div class="item">
-                    <p><b>版权声明</b></p>
-                    <p>
-                        本网站所载照片已取得 被拍摄者 授权。<br>
-                        本网站所载照片版权归 被拍摄者 和 映画一言 所有，未经书面允许，任何机构或个人不得复制、传播和使用。<br>
-                        如果我们侵犯了您的权利，或者您不希望您的照片出现在本站，请及时与我们联系。
-                    </p>
                 </div>
             </div>
-        </div>
 
-    </div>
+        </div>
+        <div style="display: none">
+            <img src="images/logo.png"/>
+            <img src="images/logo_hover.png"/>
+            <img src="images/logo_focus.png"/>
+        </div>
     </body>
     <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.1.0/jquery.min.js"></script>
     <script src="static/fullpage/vendors/jquery.easings.min.js"></script>
