--- a/index.html
+++ b/index.html
@@ -146,6 +146,22 @@
             </div>
 
         </div>
+        <script type="text/javascript">
+            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff766f9610e441d59b08c06fc00645794' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-52396107-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
+
     </body>
     <script type="text/javascript" src="http://cdn.staticfile.org/jquery/1.9.0/jquery.min.js"></script>
     <script src="static/fullpage/vendors/jquery.easings.min.js"></script>
